--- a/portfolio/src/Home/Home.css
+++ b/portfolio/src/Home/Home.css
@@ -1,5 +1,5 @@
 .home__bg{
-    background-image: url(./img/hero.jpg);
+    background-image: url(../img/hero.jpg);
     background-color: #010101;
     background-position: 50%;
     background-repeat: no-repeat;
